Update 01. BIOS Setup.md

--- a/01. BIOS Setup.md
+++ b/01. BIOS Setup.md
@@ -1,17 +1,6 @@
-Disable
-
-  Resize Bar
-  SR-IOV (no need as i will do full passthrough)
-  Secure Boot
-
-
-Enable
-
-  VT-D
-  IOMMU
-
-
-
-<p>OK lets tr<strong>y this</strong></p>
+<p>Setup as below in the BIOS:</p>
 <p>&nbsp;</p>
-<p><strong>kkk</strong></p>
+<p><span style="color:#c62828;"><i><strong>Disable</strong></i></span></p>
+<p>&nbsp;Resize Bar<br>&nbsp;SR-IOV (no need as i will do full passthrough)<br>&nbsp;Secure Boot</p>
+<p><br><span style="color:#00796b;"><i><strong>Enable</strong></i></span></p>
+<p>&nbsp;VT-D<br>&nbsp;IOMMU</p>
