Update 01. BIOS Setup.md

--- a/01. BIOS Setup.md
+++ b/01. BIOS Setup.md
@@ -4,3 +4,23 @@
 <p>&nbsp;Resize Bar<br>&nbsp;SR-IOV (no need as i will do full passthrough)<br>&nbsp;Secure Boot</p>
 <p><br><span style="color:#00796b;"><i><strong>Enable</strong></i></span></p>
 <p>&nbsp;VT-D<br>&nbsp;IOMMU</p>
+
+
+Test 123
+
+see bold
+
+see <span style="color: #e03e2d;">color</span>
+
+see box
+
+| t   |     |     |
+| --- | --- | --- |
+|     | e   |     |
+|     |     | r   |
+
+&nbsp;
+
+* * *
+
+25/07/2024 12:05
