--- a/01. BIOS Setup.md
+++ b/01. BIOS Setup.md
@@ -10,7 +10,7 @@ Test 123
 
 see **bold**
 
-see <span style="color: #e03e2d;">color</span>
+This is a <span style="color:red">red</span> text.
 
 see box
 
